--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -9,9 +9,12 @@
     align-items: center;
     gap: 10px;
 }
+.nav-logo img {
+    width: 50px;
+}
 .nav-logo p {
     color: #171717;
-    font-size: 38px;
+    font-size: 30px;
     font-weight: 600;
 }
 .nav-menu {
@@ -20,7 +23,7 @@
     list-style: none;
     gap: 50px;
     color: #626262;
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 500;
 }
 .nav-menu li {
@@ -48,8 +51,8 @@
     gap: 45px;
 }
 .nav-login-cart button {
-    width: 157px;
-    height: 58px;
+    width: 142px;
+    height: 50px;
     outline: none;
     border: 1px solid #7a7a7a;
     border-radius: 75px;
@@ -62,10 +65,12 @@
 .nav-login-cart button:active {
     background: #f3f3f3;
 }
-
+.nav-login-cart img {
+    width: 32px;
+}
 .nav-cart-count{
-    width: 22px;
-    height: 22px;
+    width: 20px;
+    height: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
